nivasa-macros/tests/trybuild/validation_partial_dto_tuple.rs
use nivasa_macros::PartialDto;

#[derive(PartialDto)]
struct InvalidPatchTupleDto(
    #[is_email] Option<String>,
);

fn main() {}
